--- a/package.json
+++ b/package.json
@@ -3,23 +3,27 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@defillama/sdk": "^2.3.58",
     "@sentry/serverless": "^6.16.1",
     "@sentry/tracing": "^6.16.1",
     "@walletconnect/web3-provider": "^1.7.0",
     "aws-sdk": "^2.981.0",
     "axios": "^0.21.1",
+    "better-sqlite3": "^7.5.1",
     "class-transformer": "^0.4.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "electron": "^16.0.4",
     "encoding": "^0.1.13",
+    "ethers": "^5.6.4",
     "express": "^4.17.1",
     "graphql": "^16.0.1",
     "graphql-request": "^3.6.1",
     "moralis": "^0.0.78",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
-    "web3": "^1.6.1"
+    "web3": "^1.6.1",
+    "winston": "^3.7.2"
   },
   "scripts": {
     "dev": "serverless offline start --httpPort 3001",
@@ -33,6 +37,7 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.87",
+    "@types/better-sqlite3": "^7.5.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.1",
