--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@defillama/sdk": "^2.3.58",
+    "@ethersproject/abi": "^5.6.1",
     "@sentry/serverless": "^6.16.1",
     "@sentry/tracing": "^6.16.1",
     "@walletconnect/web3-provider": "^1.7.0",
