--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@datadog/datadog-api-client": "^1.0.0-beta.9",
     "@defillama/sdk": "^2.3.58",
     "@ethersproject/abi": "^5.6.1",
     "@sentry/serverless": "^6.16.1",
