--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "better-sqlite3": "^7.5.1",
     "class-transformer": "^0.4.0",
     "cors": "^2.8.5",
+    "dd-trace": "^2.7.1",
     "dotenv": "^10.0.0",
     "electron": "^16.0.4",
     "encoding": "^0.1.13",
@@ -34,7 +35,7 @@
     "deploy": "sls deploy --stage prod",
     "dist": "sh ./scripts/dist.sh",
     "lint": "eslint -c .eslintrc.js --ext .ts src",
-    "test": "npx ts-node test/test.ts",
+    "test": "jest",
     "ts-node": "ts-node"
   },
   "devDependencies": {
@@ -42,6 +43,7 @@
     "@types/better-sqlite3": "^7.5.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.5.1",
     "@types/node": "^16.11.1",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
@@ -52,12 +54,14 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.1.1",
+    "jest": "^28.1.0",
     "nodemon": "^2.0.13",
     "prettier": "^2.4.1",
     "serverless": "^2.68.0",
     "serverless-offline": "^8.3.1",
     "serverless-prune-plugin": "^1.6.1",
     "serverless-webpack": "github:serverless-heaven/serverless-webpack#pull/661/head",
+    "ts-jest": "^28.0.2",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3",
