fix docker build

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dev": "serverless offline start --httpPort 3001",
     "build": "tsc",
     "start": "node dist/adapters/index.js",
+    "start-docker": "node adapters/index.js",
     "deploy": "sls deploy --stage prod",
     "dist": "sh ./scripts/dist.sh",
     "lint": "eslint -c .eslintrc.js --ext .ts src",
