--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ts-node": "ts-node"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.17.12",
     "@types/aws-lambda": "^8.10.87",
     "@types/better-sqlite3": "^7.5.0",
     "@types/cors": "^2.8.12",
