helm charts & misc fixes

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,13 @@ node_modules
 *.log
 docker
 dist
+
+# Terraform
+**/.terraform/*
+*.tfstate
+*.tfstate.*
+terraform.tfvars
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
